--- a/index.html
+++ b/index.html
@@ -476,7 +476,7 @@
     <p class="section-subtitle">Direttamente da Twitch: <strong>vitrio_ttv</strong></p>
     <div style="margin-top:20px; text-align:center;">
       <iframe
-        src="https://player.twitch.tv/?channel=vitrio_ttv&parent=vitrio-tv.netlify.app"
+        src="https://player.twitch.tv/?channel=vitrio_ttv&parent=vitrio14.github.io"
         frameborder="0"
         allowfullscreen="true"
         scrolling="no"
@@ -535,7 +535,7 @@
     <div style="margin-top:20px; text-align:center;">
       <!-- Clip 1 -->
 <iframe
-  src="https://player.twitch.tv/?video=2640483889&parent=vitrio-tv.netlify.app"
+  src="https://player.twitch.tv/?video=2640483889&parent=vitrio14.github.io"
         frameborder="0" 
         allowfullscreen="true"
         scrolling="no"
@@ -727,7 +727,7 @@
   <!-- LOGIN DISCORD + PROFILO -->
   <script>
     const DISCORD_CLIENT_ID = "1305192295590789130";
-    const DISCORD_REDIRECT = "https://Vitrio14.github.io/vitrio-website/discord-auth.html";
+    const DISCORD_REDIRECT = "https://vitrio14.github.io/vitrio-website/discord-auth.html";
     const DISCORD_SCOPES = "identify guilds guilds.members.read";
 
 
@@ -891,4 +891,5 @@ const url =
 
 </body>
 </html>
+
 
