--- a/index.html
+++ b/index.html
@@ -727,7 +727,7 @@
   <!-- LOGIN DISCORD + PROFILO -->
   <script>
     const DISCORD_CLIENT_ID = "1305192295590789130";
-    const DISCORD_REDIRECT = "https://vitrio14.github.io/vitrio-website/discord-auth.html";
+    const DISCORD_REDIRECT = "https://vitriotv.com/discord-auth.html";
     const DISCORD_SCOPES = "identify guilds guilds.members.read";
 
 
@@ -891,5 +891,6 @@ const url =
 
 </body>
 </html>
+
 
 
