--- a/discord-auth.html
+++ b/discord-auth.html
@@ -19,7 +19,7 @@ if (!code) {
 }
 
 // 2. Invia il codice al backend per scambiarlo con un access_token
-fetch("http://185.229.236.206:10000/discord/token", {
+fetch("https://api.vitriotv.com/discord/token", {
     method: "POST",
     headers: { "Content-Type": "application/json" },
     body: JSON.stringify({ code })
@@ -48,4 +48,5 @@ fetch("http://185.229.236.206:10000/discord/token", {
 
 </body>
 </html>
+
 
