--- a/index.html
+++ b/index.html
@@ -476,7 +476,7 @@
     <p class="section-subtitle">Direttamente da Twitch: <strong>vitrio_ttv</strong></p>
     <div style="margin-top:20px; text-align:center;">
       <iframe
-        src="https://player.twitch.tv/?channel=vitrio_ttv&parent=vitrio14.github.io"
+        src="https://player.twitch.tv/?channel=vitrio_ttv&parent=vitriotv.com"
         frameborder="0"
         allowfullscreen="true"
         scrolling="no"
@@ -535,7 +535,7 @@
     <div style="margin-top:20px; text-align:center;">
       <!-- Clip 1 -->
 <iframe
-  src="https://player.twitch.tv/?video=2640483889&parent=vitrio14.github.io"
+  src="https://player.twitch.tv/?video=2640483889&parent=vitriotv.com"
         frameborder="0" 
         allowfullscreen="true"
         scrolling="no"
@@ -891,6 +891,7 @@ const url =
 
 </body>
 </html>
+
 
 
 
