--- a/index.html
+++ b/index.html
@@ -189,6 +189,7 @@
       border: 1px solid #2c2c2c;
       box-shadow: 0 0 12px rgba(169,112,255,0.18);
       transition: 0.25s;
+      text-align: center;
     }
 
     .card:hover {
@@ -891,6 +892,7 @@ const url =
 
 </body>
 </html>
+
 
 
 
