--- a/index.html
+++ b/index.html
@@ -594,9 +594,10 @@
     </div>
   </section>
 
-  <footer>
-    © 2025 Vitrio - Tutti i diritti riservati
-  </footer>
+<footer>
+  <p>&copy; 2026 Vitrio. Tutti i diritti riservati.</p>
+  <p><a href="cookie-policy.html" style="color: #666; text-decoration: none; font-size: 11px; opacity: 0.7;">Cookie Policy</a></p>
+</footer>
 
   <!-- SCRIPT UI BASE -->
   <script>
@@ -971,6 +972,7 @@ const url =
 
 </body>
 </html>
+
 
 
 
