--- a/admin.html
+++ b/admin.html
@@ -409,7 +409,8 @@ footer {
 
 
 <footer>
-  © 2025 Vitrio - Tutti i diritti riservati
+  <p>&copy; 2026 Vitrio. Tutti i diritti riservati.</p>
+  <p><a href="cookie-policy.html" style="color: #666; text-decoration: none; font-size: 11px; opacity: 0.7;">Cookie Policy</a></p>
 </footer>
 
 
@@ -552,5 +553,38 @@ footer {
   refreshBtn.addEventListener("click", loadMessages);
 </script>
 
+  <div id="cookie-banner" style="display:none; position:fixed; bottom:30px; left:50%; transform:translateX(-50%); width:90%; max-width:450px; background:rgba(13,13,18,0.95); backdrop-filter:blur(15px); border:1px solid rgba(169,112,255,0.4); border-radius:20px; padding:20px; z-index:10001; box-shadow:0 15px 40px rgba(0,0,0,0.6); font-family:'Poppins',sans-serif;">
+  <div style="text-align:center;">
+    <p style="margin:0 0 15px 0; font-size:14px; color:#fff;">Usiamo i cookie per migliorare Vitrio. <a href="cookie-policy.html" style="color:#a970ff; text-decoration:none; font-weight:bold;">Leggi la Policy</a>.</p>
+    <div style="display:flex; gap:10px; justify-content:center;">
+      <button id="btn-accetta" style="padding:10px 20px; border-radius:10px; border:none; background:#a970ff; color:white; font-weight:600; cursor:pointer;">Accetta</button>
+      <button id="btn-rifiuta" style="padding:10px 20px; border-radius:10px; border:none; background:rgba(255,255,255,0.05); color:#ccc; font-weight:600; cursor:pointer;">Rifiuta</button>
+    </div>
+  </div>
+</div>
+
+<script>
+  (function() {
+    const banner = document.getElementById('cookie-banner');
+    const btnAccetta = document.getElementById('btn-accetta');
+    const btnRifiuta = document.getElementById('btn-rifiuta');
+
+    if (!localStorage.getItem('vitrio_cookie_consent')) {
+      setTimeout(() => { banner.style.display = 'block'; }, 1000);
+    }
+
+    btnAccetta.onclick = () => {
+      localStorage.setItem('vitrio_cookie_consent', 'accepted');
+      banner.style.display = 'none';
+    };
+
+    btnRifiuta.onclick = () => {
+      localStorage.setItem('vitrio_cookie_consent', 'declined');
+      banner.style.display = 'none';
+    };
+  })();
+</script>
+
 </body>
 </html>
+
